--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">A-mart(Mobprog)</string>
-    <string name="title_home">Home</string>
+    <string name="home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="profile">Profile</string>
+    <string name="products">Products</string>
 </resources>
